Fix nav bar elements wrap before mobile view breakpoint

--- a/css/index.css
+++ b/css/index.css
@@ -194,6 +194,7 @@ header {
   }
 
   .links-nav {
+    flex-wrap: wrap;
     margin-top: 30px;
   }
 
